--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 <!-- Your code here -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <title>My Site Title</title>
+
+    <!-- head -->
+
+  </head>
+  <body>
+
+    <!-- body -->
+  </body>
+</html>
